new_1 добавил картинку

--- a/l2.md
+++ b/l2.md
@@ -6,3 +6,7 @@
 >>> Цитата 3
 #### Заголовок 4
 >>>> Цитата 4
+
+Танос
+
+![Фильм 1](https://searchthisweb.com/wallpaper/thanos_4000x4600_64tob.jpg "Танос")
